use YAML for test fixture instead of ScriptLineParser